# grafeo-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md  build.rs  codecov.yml  deny.toml  docker-compose.yml  du.exe.stackdump
.github/workflows/: ci.yml  publish.yml  replication.yml
client/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
client/src/: App.tsx
client/src/api/: client.ts
client/src/components/Databases/: BackupsSection.module.css  BackupsSection.tsx  CreateBackupDialog.module.css  CreateBackupDialog.tsx  DangerZone.module.css  DangerZone.tsx  DatabaseCards.module.css  DatabaseCards.tsx  EpochRestoreDialog.module.css  EpochRestoreDialog.tsx  ServerStats.module.css  ServerStats.tsx
client/src/components/Layout/: Layout.module.css  Layout.tsx
client/src/components/QueryEditor/: QueryEditor.module.css  QueryEditor.tsx  TabBar.module.css  TabBar.tsx
client/src/components/ResultsPanel/: GraphView.tsx  NodeDetailPanel.module.css  NodeDetailPanel.tsx  ResultsPanel.module.css  ResultsPanel.tsx  TableView.tsx
client/src/components/ShortcutHelp/: ShortcutHelp.module.css  ShortcutHelp.tsx
client/src/components/Sidebar/: CreateDatabaseDialog.module.css  CreateDatabaseDialog.tsx  DatabasePanel.module.css  DatabasePanel.tsx  Sidebar.module.css  Sidebar.tsx
client/src/components/StatusBar/: StatusBar.module.css  StatusBar.tsx
client/src/components/Tokens/: TokenPanel.module.css  TokenPanel.tsx
client/src/components/TopNav/: TopNav.module.css  TopNav.tsx
client/src/components/ui/: Panel.module.css  Panel.tsx
client/src/context/: WorkbenchContext.tsx
client/src/hooks/: useGraphData.ts  useQuery.ts  useQueryHistory.ts
client/src/styles/: buttons.module.css  global.css  variables.css
client/src/types/: api.ts
client/src/utils/: languageModes.ts
client/src/views/: TokensView.module.css  TokensView.tsx  WorkbenchView.tsx
client/src/views/databases/: DatabaseDetails.module.css  DatabaseDetails.tsx  DatabasesList.module.css  DatabasesList.tsx
crates/grafeo-bolt/: Cargo.toml
crates/grafeo-bolt/src/: lib.rs
crates/grafeo-boltr/: Cargo.toml
crates/grafeo-boltr/src/: auth.rs  backend.rs  encode.rs  lib.rs
crates/grafeo-gwp/: Cargo.toml
crates/grafeo-gwp/src/: auth.rs  backend.rs  encode.rs  lib.rs
crates/grafeo-http/: Cargo.toml  build.rs
crates/grafeo-http/src/: encode.rs  error.rs  lib.rs  state.rs  types.rs
crates/grafeo-http/src/middleware/: auth.rs  auth_context.rs  mod.rs  rate_limit.rs  request_id.rs  studio_auth.rs
crates/grafeo-http/src/routes/: admin.rs  backup.rs  batch.rs  database.rs  graph_store.rs  mod.rs  query.rs  search.rs  sparql_protocol.rs  system.rs  tokens.rs  transaction.rs  websocket.rs
crates/grafeo-service/: Cargo.toml
crates/grafeo-service/src/: admin.rs  auth.rs  backup.rs  crdt.rs  database.rs  error.rs  lib.rs  metrics.rs  query.rs  rate_limit.rs  schema.rs  search.rs  session.rs  stream.rs  sync.rs  token_service.rs  token_store.rs  types.rs
crates/grafeo-studio/: Cargo.toml
crates/grafeo-studio/src/: lib.rs
crates/grafeo-sync/: Cargo.toml
crates/grafeo-sync/src/: lib.rs
scripts/: dev-seed.sh  e2e-test.sh
src/: auth.rs  config.rs  database_manager.rs  error.rs  gwp.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  routes.rs  schema.rs  sessions.rs  state.rs  tls.rs  types.rs  ui.rs
src/routes/: batch.rs  database.rs  helpers.rs  mod.rs  query.rs  system.rs  transaction.rs  types.rs  websocket.rs
tests/: bolt_neo4j_smoke.py  integration.rs  replication_docker.rs
