[package]
name = "grafeo-server"
version = "0.3.0"
edition = "2024"
rust-version = "1.91.1"
license = "Apache-2.0"
repository = "https://github.com/GrafeoDB/grafeo-server"
authors = ["S.T. Grond"]
description = "HTTP server for the Grafeo graph database"

[features]
default = ["all-languages", "ai", "rdf", "storage", "owl-schema", "rdfs-schema", "gwp"]

# Server-specific features
owl-schema = ["dep:sophia_turtle", "dep:sophia_api", "dep:sophia_inmem"]
rdfs-schema = ["owl-schema"]
json-schema = ["dep:jsonschema"]
auth = ["dep:subtle"]
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile", "dep:hyper", "dep:hyper-util"]
gwp = ["dep:gwp", "dep:tonic"]

# Engine: query languages
gql = ["grafeo-engine/gql"]
cypher = ["grafeo-engine/cypher"]
sparql = ["grafeo-engine/sparql", "rdf"]
gremlin = ["grafeo-engine/gremlin"]
graphql = ["grafeo-engine/graphql"]
sql-pgq = ["grafeo-engine/sql-pgq"]
all-languages = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]

# Engine: storage & execution
parallel = ["grafeo-engine/parallel"]
wal = ["grafeo-engine/wal"]
spill = ["grafeo-engine/spill"]
mmap = ["grafeo-engine/mmap"]
storage = ["parallel", "wal", "spill", "mmap"]

# Engine: search & AI
vector-index = ["grafeo-engine/vector-index"]
text-index = ["grafeo-engine/text-index"]
hybrid-search = ["grafeo-engine/hybrid-search"]
cdc = ["grafeo-engine/cdc"]
embed = ["grafeo-engine/embed"]
ai = ["vector-index", "text-index", "hybrid-search", "cdc"]

# Engine: data models
rdf = ["grafeo-engine/rdf"]

# Everything (server + engine)
full = [
    "all-languages", "ai", "rdf", "storage", "embed",
    "owl-schema", "rdfs-schema", "json-schema", "auth", "tls", "gwp",
]

[dependencies]
# Grafeo engine
grafeo-engine = { version = "0.5.3", default-features = false }
grafeo-common = "0.5.3"

# Web framework
axum = { version = "0.8", features = ["json", "query", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Error handling
thiserror = "2.0"

# Concurrency
parking_lot = "0.12"
dashmap = "6.1"

# Configuration
clap = { version = "4.5", features = ["derive", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.11", features = ["v4"] }
futures-util = "0.3"

# Security (feature-gated)
subtle = { version = "2", optional = true }

# System info (RAM, disk)
sysinfo = "0.38.1"

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Static file embedding for the web UI
rust-embed = "8.5"
mime_guess = "2.0"

# Schema parsing (feature-gated)
sophia_turtle = { version = "0.9", optional = true }
sophia_api = { version = "0.9", optional = true }
sophia_inmem = { version = "0.9", optional = true }
jsonschema = { version = "0.41", optional = true }

# GQL Wire Protocol (feature-gated)
gwp = { version = "0.1", optional = true }
tonic = { version = "0.12", optional = true }

# TLS (feature-gated)
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"], optional = true }
rustls-pemfile = { version = "2", optional = true }
hyper = { version = "1", features = ["http1", "http2", "server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"], optional = true }

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["gzip", "json"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
tempfile = "3.25"
gwp = "0.1"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
uninlined_format_args = "allow"
doc_markdown = "allow"
redundant_closure_for_method_calls = "allow"
similar_names = "allow"
needless_for_each = "allow"  # utoipa OpenApi derive generates for_each
too_many_lines = "allow"
needless_pass_by_value = "allow"
items_after_statements = "allow"
struct_field_names = "allow"
wildcard_imports = "allow"
single_match_else = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
manual_let_else = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
