[package]
name = "grafeo-gwp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GQL Wire Protocol (gRPC) transport adapter for Grafeo Server"

[dependencies]
grafeo-service = { workspace = true }
grafeo-engine = { workspace = true }
grafeo-common = { workspace = true }
gwp = { path = "../../../gwp" }
tonic = "0.14"
dashmap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[features]
default = []
tls = ["gwp/tls"]
auth = ["grafeo-service/auth"]

[lints]
workspace = true
