[package]
name = "grafeo-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core business logic for the Grafeo graph database server"

[dependencies]
grafeo-engine = { workspace = true }
grafeo-common = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }

# JSON (always needed for SearchHit properties)
serde_json = "1"

# Schema loading (optional)
sophia_turtle = { version = "0.9", optional = true }
sophia_api = { version = "0.9", optional = true }
sophia_inmem = { version = "0.9", optional = true }
jsonschema = { version = "0.41", optional = true }

# Auth (optional)
subtle = { version = "2", optional = true }

# OpenAPI (optional — activated by HTTP transport crate)
utoipa = { version = "5", optional = true }

[features]
default = ["gql", "storage", "algos"]

# Query languages (forwarded to grafeo-engine)
gql = ["grafeo-engine/gql"]
cypher = ["grafeo-engine/cypher"]
sparql = ["grafeo-engine/sparql", "rdf"]
gremlin = ["grafeo-engine/gremlin"]
graphql = ["grafeo-engine/graphql"]
sql-pgq = ["grafeo-engine/sql-pgq"]
all-languages = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]

# Engine: graph algorithms
algos = ["grafeo-engine/algos"]

# Engine: storage & execution
parallel = ["grafeo-engine/parallel"]
wal = ["grafeo-engine/wal"]
spill = ["grafeo-engine/spill"]
mmap = ["grafeo-engine/mmap"]
storage = ["parallel", "wal", "spill", "mmap"]

# Engine: search & AI
vector-index = ["grafeo-engine/vector-index"]
text-index = ["grafeo-engine/text-index"]
hybrid-search = ["grafeo-engine/hybrid-search"]
cdc = ["grafeo-engine/cdc"]
embed = ["grafeo-engine/embed"]
ai = ["vector-index", "text-index", "hybrid-search", "cdc"]

# Engine: data models
rdf = ["grafeo-engine/rdf"]

# Schema loading
owl-schema = ["dep:sophia_turtle", "dep:sophia_api", "dep:sophia_inmem"]
rdfs-schema = ["owl-schema"]
json-schema = ["dep:jsonschema"]

# Auth provider
auth = ["dep:subtle"]

# OpenAPI schema derives (utoipa::ToSchema)
openapi = ["dep:utoipa"]

[lints]
workspace = true
